--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
       - 'pyproject.toml'
       - 'Makefile'
       - '.github/workflows/test.yml'
+      - 'benchmark/lomoco/requirements.txt'
   pull_request:
     branches: [main, develop]
     paths:
@@ -17,6 +18,7 @@ on:
       - 'pyproject.toml'
       - 'Makefile'
       - '.github/workflows/test.yml'
+      - 'benchmark/lomoco/requirements.txt'
   workflow_dispatch:
 
 jobs:
@@ -107,3 +109,30 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+  verify-benchmark-dependencies:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+      fail-fast: false
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade setuptools wheel
+
+      - name: Install and verify dependencies
+        working-directory: benchmark/lomoco
+        run: |
+          pip install -r requirements.txt
+          pip check
