feat: add siliconflow embedder (#157)

--- a/.env.example
+++ b/.env.example
@@ -93,7 +93,7 @@ DEEPSEEK_LLM_BASE_URL=https://api.deepseek.com
 # =============================================================================
 # 3. Embedding Configuration (Required)
 # =============================================================================
-# Choose your embedding provider: qwen, openai, huggingface, lmstudio, ollama
+# Choose your embedding provider: qwen, openai, siliconflow, huggingface, lmstudio, ollama
 EMBEDDING_PROVIDER=qwen
 
 EMBEDDING_API_KEY=your_api_key_here
@@ -104,6 +104,7 @@ EMBEDDING_DIMS=1536
 # Default Base URLs for embedding providers, you can adjust if necessary
 QWEN_EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 OPENAI_EMBEDDING_BASE_URL=https://api.openai.com/v1
+SILICONFLOW_EMBEDDING_BASE_URL=https://api.siliconflow.cn/v1
 HUGGINFACE_EMBEDDING_BASE_URL=
 LMSTUDIO_EMBEDDING_BASE_URL=
 OLLAMA_EMBEDDING_BASE_URL=
