feat(usermemory): Query rewrite (#186)
* add query rewrite function

* adjust config

* add docs

* fix empty string bug

--- a/.env.example
+++ b/.env.example
@@ -259,7 +259,16 @@ SPARSE_EMBEDDER_MODEL=text-embedding-v4
 SPARSE_EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 
 # =============================================================================
-# 13. PowerMem HTTP API Server Configuration
+# 13. Query Rewrite Configuration (Optional)
+# =============================================================================
+# Custom query rewritten prompt & he model used, keeping it from the same manufacturer as llm
+
+QUERY_REWRITE_ENABLED=false
+# QUERY_REWRITE_PROMPT=
+# QUERY_REWRITE_MODEL_OVERRIDE=
+
+# =============================================================================
+# 14. PowerMem HTTP API Server Configuration
 # =============================================================================
 # Configuration for the PowerMem HTTP API Server
 # =============================================================================
