--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "click>=8.0.0",
     "rank-bm25>=0.2.2",
     "pyobvector>=0.2.21,<0.3.0",
+    "pyseekdb>=1.0.0",
     "jieba>=0.42.1",
     "azure-identity>=1.24.0",
     "psycopg2-binary>=2.9.0",
