--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ server = ["dashboard/**"]
 
 [project.scripts]
 powermem-server = "server.cli.server:server"
+pmem = "powermem.cli.main:cli"
+powermem-cli = "powermem.cli.main:cli"
 
 [tool.black]
 line-length = 88
