--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
       - 'pyproject.toml'
       - 'Makefile'
       - '.github/workflows/test.yml'
-      - 'benchmark/lomoco/requirements.txt'
+      - '../../benchmark/locomo/requirements.txt'
   pull_request:
     branches: [main, develop]
     paths:
@@ -18,7 +18,7 @@ on:
       - 'pyproject.toml'
       - 'Makefile'
       - '.github/workflows/test.yml'
-      - 'benchmark/lomoco/requirements.txt'
+      - '../../benchmark/locomo/requirements.txt'
   workflow_dispatch:
 
 jobs:
@@ -83,7 +83,7 @@ jobs:
           pip install --upgrade setuptools wheel
 
       - name: Install and verify dependencies
-        working-directory: benchmark/lomoco
+        working-directory: benchmark/locomo
         run: |
           pip install -r requirements.txt
           pip check
