feat: Enhance rerank configuration and integration
- Introduced new RERANKER_* environment variables for improved configuration management across rerank providers.
- Updated .env.example to include new rerank settings and reorganized sections for clarity.
- Refactored rerank integration files to utilize the new base configuration structure, ensuring consistency in API key and base URL handling.
- Updated error messages in rerank classes to reflect the new environment variable naming convention.

--- a/.env.example
+++ b/.env.example
@@ -109,9 +109,23 @@ HUGGINFACE_EMBEDDING_BASE_URL=
 LMSTUDIO_EMBEDDING_BASE_URL=
 OLLAMA_EMBEDDING_BASE_URL=
 
-## 4-10. Keep the default settings, as modifications are generally not needed.
 # =============================================================================
-# 4. Agent Configuration (Optional)
+# 4. Rerank Configuration (Optional)
+# =============================================================================
+# Rerank configuration for reordering search results
+RERANKER_ENABLED=false
+RERANKER_PROVIDER=qwen
+RERANKER_MODEL=qwen3-rerank
+RERANKER_API_KEY=your_api_key_here
+# RERANKER_API_BASE_URL=
+
+# Provider-specific configurations
+# For Qwen: Uses DASHSCOPE_API_KEY and DASHSCOPE_BASE_URL if RERANKER_* not set
+# For Jina: Uses JINA_API_KEY and JINA_API_BASE_URL if RERANKER_* not set
+# For Zhipu AI: Uses ZAI_API_KEY and ZAI_API_BASE_URL if RERANKER_* not set
+
+# =============================================================================
+# 5. Agent Configuration (Optional)
 # =============================================================================
 # Agent memory management settings
 AGENT_ENABLED=true
@@ -125,7 +139,7 @@ AGENT_MEMORY_MODE=auto
 
 
 # =============================================================================
-# 5. Intelligent Memory Configuration (Optional)
+# 6. Intelligent Memory Configuration (Optional)
 # =============================================================================
 # Ebbinghaus forgetting curve settings
 INTELLIGENT_MEMORY_ENABLED=true
@@ -147,7 +161,7 @@ INTELLIGENT_MEMORY_FALLBACK_TO_SIMPLE_ADD=false
 
 
 # =============================================================================
-# 6. Performance Configuration (Optional)
+# 7. Performance Configuration (Optional)
 # =============================================================================
 # Memory management settings
 MEMORY_BATCH_SIZE=100
@@ -163,7 +177,7 @@ VECTOR_STORE_INDEX_REBUILD_INTERVAL=86400
 
 
 # =============================================================================
-# 7. Security Configuration (Optional)
+# 8. Security Configuration (Optional)
 # =============================================================================
 # Encryption settings
 ENCRYPTION_ENABLED=false
@@ -177,7 +191,7 @@ ACCESS_CONTROL_ADMIN_USERS=admin,root
 
 
 # =============================================================================
-# 8. Telemetry Configuration (Optional)
+# 9. Telemetry Configuration (Optional)
 # =============================================================================
 # Usage analytics and monitoring
 TELEMETRY_ENABLED=false
@@ -189,7 +203,7 @@ TELEMETRY_RETENTION_DAYS=30
 
 
 # =============================================================================
-# 9. Audit Configuration (Optional)
+# 10. Audit Configuration (Optional)
 # =============================================================================
 # Audit logging settings
 AUDIT_ENABLED=true
@@ -201,7 +215,7 @@ AUDIT_LOG_ROTATION_SIZE=100MB
 
 
 # =============================================================================
-# 10. Logging Configuration (Optional)
+# 11. Logging Configuration (Optional)
 # =============================================================================
 # General logging settings
 LOGGING_LEVEL=DEBUG
@@ -218,7 +232,7 @@ LOGGING_CONSOLE_FORMAT=%(levelname)s - %(message)s
 
 
 # =============================================================================
-# 11. Graph Store Configuration (Optional)
+# 12. Graph Store Configuration (Optional)
 # =============================================================================
 # Graph store for knowledge graph storage and retrieval
 # Enable graph store functionality
@@ -248,7 +262,7 @@ GRAPH_STORE_MAX_HOPS=3
 # GRAPH_STORE_CUSTOM_DELETE_RELATIONS_PROMPT=
 
 # =============================================================================
-# 12. Sparse Embedding Configuration (Optional)
+# 13. Sparse Embedding Configuration (Optional)
 # =============================================================================
 # Choose your sparse embedding provider: qwen, openai
 SPARSE_VECTOR_ENABLE=false
@@ -259,7 +273,7 @@ SPARSE_EMBEDDER_MODEL=text-embedding-v4
 SPARSE_EMBEDDING_BASE_URL=https://dashscope.aliyuncs.com/api/v1
 
 # =============================================================================
-# 13. Query Rewrite Configuration (Optional)
+# 14. Query Rewrite Configuration (Optional)
 # =============================================================================
 # Custom query rewritten prompt & he model used, keeping it from the same manufacturer as llm
 
@@ -268,7 +282,7 @@ QUERY_REWRITE_ENABLED=false
 # QUERY_REWRITE_MODEL_OVERRIDE=
 
 # =============================================================================
-# 14. PowerMem HTTP API Server Configuration
+# 15. PowerMem HTTP API Server Configuration
 # =============================================================================
 # Configuration for the PowerMem HTTP API Server
 # =============================================================================
